--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,32 @@ dependencies:
   flutter:
     sdk: flutter
 
+  jiffy: ^5.0.0
+  intl: ^0.17.0
+  flutter_screenutil: ^5.5.4
+  dio: ^4.0.6
+  flutter_svg: ^1.1.5
+  flutter_rating_bar: ^4.0.1
+  badges: ^2.0.3
+  carousel_slider: ^4.1.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  google_maps_flutter: ^2.2.1
+  url_launcher: ^6.1.6
+  transparent_image: ^2.0.0
+  package_info_plus: ^3.0.1
+  flutter_keyboard_visibility: ^5.4.0
+  geolocator: ^9.0.2
+  cached_network_image: ^3.2.2
+  readmore: ^2.2.0
+  cloud_firestore: ^4.0.2
+  firebase_auth: ^4.0.2
+  firebase_messaging: ^14.0.2
+  firebase_app_check: ^0.1.1+1
+  firebase_crashlytics: ^3.0.2
+  flutter_local_notifications: ^12.0.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
