--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mapalus_flutter_commons
 description: Common used stuff in flutter for mapalus project
-version: 0.0.2
+version: 0.0.3
 homepage: "https//www.mapalusindonesia.com"
 publish_to: 'none'
 
@@ -23,19 +23,19 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_maps_flutter: ^2.2.1
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.7
   transparent_image: ^2.0.0
   package_info_plus: ^3.0.2
   flutter_keyboard_visibility: ^5.4.0
   geolocator: ^9.0.2
-  cached_network_image: ^3.2.2
+  cached_network_image: ^3.2.3
   readmore: ^2.2.0
   cloud_firestore: ^4.0.3
   firebase_auth: ^4.1.0
   firebase_messaging: ^14.0.3
   firebase_app_check: ^0.1.1+2
   firebase_crashlytics: ^3.0.3
-  flutter_local_notifications: ^12.0.3+1
+  flutter_local_notifications: ^12.0.4
   infinite_scroll_pagination: ^3.2.0
 
   flutter_ringtone_player: ^3.2.0
