--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mapalus_flutter_commons
-description: Common used stuff in flutter for mapalus project
-version: 0.0.6
+description: Common used flutter stuff in mapalus project
+version: 0.0.7
 homepage: "https//www.mapalusindonesia.com"
 publish_to: 'none'
 
@@ -13,19 +13,19 @@ dependencies:
     sdk: flutter
 
   jiffy: ^5.0.0
-  intl: ^0.17.0
-  flutter_screenutil: ^5.6.0
-  dio: ^4.0.6
-  flutter_svg: ^1.1.6
+  intl: ^0.18.0
+  flutter_screenutil: ^5.6.1
+  dio: ^5.0.1
+  flutter_svg: ^2.0.2
   flutter_rating_bar: ^4.0.1
-  badges: ^2.0.3
-  carousel_slider: ^4.1.1
+  badges: ^3.0.2
+  carousel_slider: ^4.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  google_maps_flutter: ^2.2.1
-  url_launcher: ^6.1.7
-  transparent_image: ^2.0.0
-  package_info_plus: ^3.0.2
+  google_maps_flutter: ^2.2.5
+  url_launcher: ^6.1.10
+  transparent_image: ^2.0.1
+  package_info_plus: ^3.0.3
   flutter_keyboard_visibility: ^5.4.0
   geolocator: ^9.0.2
   cached_network_image: ^3.2.3
@@ -35,12 +35,12 @@ dependencies:
   firebase_messaging: ^14.0.3
   firebase_app_check: ^0.1.1+2
   firebase_crashlytics: ^3.0.3
-  flutter_local_notifications: ^12.0.4
+  flutter_local_notifications: ^13.0.0
   infinite_scroll_pagination: ^3.2.0
 
   flutter_ringtone_player: ^3.2.0
   flutter_dropdown: ^1.0.1+hotfix.1
-  device_info_plus: ^8.0.0
+  device_info_plus: ^8.1.0
 
 
 dev_dependencies:
