--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_rating_bar: ^4.0.1
   badges: ^3.1.2
-  carousel_slider: ^4.2.1
+#  carousel_slider: ^4.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_maps_flutter: ^2.5.3
