--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   device_info_plus: ^9.1.2
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  firebase_storage: ^11.6.9
 
 dev_dependencies:
   flutter_test:
