--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_messaging: ^15.1.3
   firebase_app_check: ^0.3.1+3
-  firebase_crashlytics: ^4.1.3
+#  firebase_crashlytics: ^4.1.3
   flutter_local_notifications: ^17.2.3
   infinite_scroll_pagination: ^4.0.0
 
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   firebase_storage: ^12.3.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
