--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   json_annotation: ^4.9.0
   firebase_storage: ^12.3.2
   uuid: ^4.5.1
+  pinput: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
