--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mapalus_flutter_commons
 description: Common used flutter stuff in mapalus project
-version: 0.0.8
+version: 0.0.9
 homepage: "https//www.mapalusindonesia.com"
 publish_to: 'none'
 
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^12.3.2
   uuid: ^4.5.1
   pinput: ^5.0.0
+  http: ^1.2.2
 
 
 dev_dependencies:
