--- a/derry.yaml
+++ b/derry.yaml
@@ -2,6 +2,6 @@ build:
   - flutter clean
   - dart pub get
   - dart run build_runner build --delete-conflicting-outputs
-uograde:
+upgrade:
   - dart pub get
   - dart pub upgrade
