--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,57 +5,57 @@ homepage: "https//www.mapalusindonesia.com"
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.5.3 <4.0.0'
+  sdk: ^3.8.1
 #  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  jiffy: ^6.2.2
-  intl: ^0.19.0
-  flutter_screenutil: ^5.9.0
-  dio: ^5.4.0
-  flutter_svg: ^2.0.9
+  jiffy: ^6.4.3
+  intl: ^0.20.2
+  flutter_screenutil: ^5.9.3
+  dio: ^5.8.0+1
+  flutter_svg: ^2.2.0
   flutter_rating_bar: ^4.0.1
   badges: ^3.1.2
 #  carousel_slider: ^4.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  google_maps_flutter: ^2.5.3
-  url_launcher: ^6.2.4
+  google_maps_flutter: ^2.12.3
+  url_launcher: ^6.3.1
   transparent_image: ^2.0.1
-  package_info_plus: ^8.0.2
+  package_info_plus: ^8.3.0
   flutter_keyboard_visibility: ^6.0.0
-  geolocator: ^13.0.1
-  cached_network_image: ^3.3.1
+  geolocator: ^14.0.2
+  cached_network_image: ^3.4.1
   readmore: ^3.0.0
-  cloud_firestore: ^5.4.4
-  firebase_auth: ^5.3.1
-  firebase_messaging: ^15.1.3
-  firebase_app_check: ^0.3.1+3
+  cloud_firestore: ^5.6.10
+  firebase_auth: ^5.6.1
+  firebase_messaging: ^15.2.8
+  firebase_app_check: ^0.3.2+8
 #  firebase_crashlytics: ^4.1.3
-  flutter_local_notifications: ^17.2.3
-  infinite_scroll_pagination: ^4.0.0
+  flutter_local_notifications: ^19.3.0
+  infinite_scroll_pagination: ^5.1.0
 
-  flutter_ringtone_player: ^4.0.0+2
+  flutter_ringtone_player: ^4.0.0+4
   flutter_dropdown: ^1.0.1+hotfix.1
-  device_info_plus: ^9.0.0
-  freezed_annotation: ^2.4.4
+  device_info_plus: ^11.5.0
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  firebase_storage: ^12.3.2
+  firebase_storage: ^12.4.8
   uuid: ^4.5.1
-  pinput: ^5.0.0
-  http: ^1.2.2
+  pinput: ^5.0.1
+  http: ^1.4.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
-  freezed: ^2.5.2
-  json_serializable: ^6.8.0
+  flutter_lints: ^6.0.0
+  build_runner: ^2.5.4
+  freezed: ^3.1.0
+  json_serializable: ^6.9.5
 
 
 # derry config
